# donjon-releases

./: .gitignore  .pre-commit-config.yaml  AUDIT_NOTES.md  CHANGELOG.md  CLAUDE-WINDOWS-AGENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DARK_FACTORY_BUILD_LOG.md  DEPLOYMENT.md  DESIGN_PHILOSOPHY.md  Dockerfile  ERRORS_AND_FIXES.md  EXPORT_GUIDE.md  INSTALL.md  LICENSE  LICENSING_AND_CRYPTO.md  README.md  ROADMAP.md  SESSION_HANDOFF.md  START.bat  VM-STATUS.md  WINDOWS-VM-TASK.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
agents/: scanner_agent.py
data/: ai_config.json  ai_usage.jsonl  last-bundle-manifest.json  performance_baselines.json
docker/: Makefile  README.md  init-db.sql
docs/: AIRGAP-DEPLOYMENT.md  API-KEYS.md  API-REFERENCE.md  API.md  ARCHITECTURE.md  CHANGELOG-v6.md  CHANGELOG-v7.md  CLI-REFERENCE.md  COMPLIANCE-GUIDE.md  CONFIGURATION.md  DEPLOYMENT-MODES.md  DEPLOYMENT.md  FEATURES-v7.md  KEY-ROTATION.md  QUICKSTART.md  SCANNER-GUIDE.md  SECURITY.md  TROUBLESHOOTING.md  WINDOWS-GUIDE.md  WINDOWS-VM-SETUP.md
infra/: check-disk.sh
lib/: __init__.py  agent_deployer.py  ai_analyzer.py  ai_engine.py  ai_prompts.py  asset_inventory.py  asset_manager.py  audit.py  audit_trail.py  backup.py  cicd_integration.py  cis_benchmarks.py  compliance.py  config.py  credential_manager.py  data_retention.py  database.py  discovery.py  eula.py  evidence.py  exceptions.py  executive_report.py  export.py  finding_dedup.py  first_run.py  human_behavior.py  import_results.py  integrations.py  integrity.py  intel_feeds.py  intel_status.py  interactive_report.py  license_guard.py  licensing.py  logger.py  multi_tenant.py  network.py  notifications.py  (+25 more)
(+149 files in other folders)
